developer name added

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,8 @@
+<!-- 
+  Develped by - Shwetang
+  GitHub profile - https://github.com/Shwetang550 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
